Allows each filter to have a custom `windowSize` (#194)
* #117 Allowing each filter to have a custom windowSize.